--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
 :root {
+	--color-primary: #0c0c0c;
+	--color-on-primary: #f8f8f8;
+
+	--color-secondary: #2f2f2f;
+	--color-on-secondary: #f8f8f8;
+
+	--color-background: #e6e6e6;
+	--color-on-background: #0c0c0c;
+
+	--color-surface: #f8f8f8;
+	--color-on-surface: #0c0c0c;
+
+	--color-highlight: #ea61dd;
+}
+
+body {
+	margin: 0;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	background-color: var(--color-background);
+	color: var(--color-on-background);
+	line-height: 1.5;
+	font-size: 18px;
 	font-family:
 		-apple-system,
 		BlinkMacSystemFont,
@@ -10,4 +35,143 @@
 		'Open Sans',
 		'Helvetica Neue',
 		sans-serif;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+/* HEADER */
+.page-header {
+	flex-shrink: 0;
+	height: 3.75rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: var(--color-primary);
+	color: var(--color-on-primary);
+}
+
+.page-header__brand {
+	font-size: 1.5rem;
+	margin-left: 1rem;
+}
+
+.page-header__nav-toggle {
+	visibility: hidden;
+}
+
+.page-header__nav-toggle-label {
+	width: 3.75rem;
+	height: 3.75rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+}
+
+.page-header__nav-toggle-label:hover {
+	background-color: var(--color-secondary);
+}
+
+.page_header__hamburger,
+.page_header__hamburger::before,
+.page_header__hamburger::after {
+	position: relative;
+	display: block;
+	background-color: #fff;
+	width: 2rem;
+	height: 0.1875rem;
+	border-radius: 0.125rem;
+}
+
+.page_header__hamburger::before,
+.page_header__hamburger::after {
+	content: '';
+	position: absolute;
+}
+
+.page_header__hamburger::before {
+	bottom: 0.75rem;
+}
+
+.page_header__hamburger::after {
+	top: 0.75rem;
+}
+
+.page-header__nav {
+	display: flex;
+	flex-direction: column;
+	position: absolute;
+	top: 3.75rem;
+	width: 100vw;
+	background-color: var(--color-primary);
+	transform: scale(1, 0);
+	transform-origin: top;
+	transition: transform 0.3s ease-in-out;
+}
+
+.page-header__nav-toggle:checked ~ .page-header__nav {
+	transform: scale(1, 1);
+}
+
+.page-header__nav a {
+	font-weight: lighter;
+	text-decoration: none;
+	padding: 0.75rem 1rem;
+	color: var(--color-on-primary);
+	opacity: 0;
+	transition: opacity 0.15s ease-in-out;
+}
+
+.page-header__nav a:hover {
+	background-color: var(--color-secondary);
+	color: var(--color-on-secondary);
+}
+
+.page-header__nav a.active {
+	box-shadow: inset 0.125rem 0 0 0 var(--color-highlight);
+}
+
+.page-header__nav-toggle:checked ~ .page-header__nav a {
+	opacity: 1;
+	transition: opacity 0.2s ease-in-out 0.15s;
+}
+
+@media (min-width: 900px) {
+	.page-header__nav-toggle-label {
+		display: none;
+	}
+
+	.page-header__nav {
+		flex-direction: row;
+		position: static;
+		transform: none;
+		width: unset;
+		transition: unset;
+	}
+
+	.page-header__nav a {
+		height: 3.75rem;
+		padding: 0 1rem;
+		display: flex;
+		align-items: center;
+		opacity: 1;
+		transition: unset;
+	}
+
+	.page-header__nav a.active {
+		box-shadow: inset 0 -0.25rem 0 0 var(--color-highlight);
+	}
+
+	.page-header__nav-toggle:checked ~ .page-header__nav a {
+		transition: unset;
+	}
+}
+
+/* VIEW BODY */
+.view-body {
+	flex-grow: 1;
+	overflow: auto;
+	padding: 0 1rem;
 }
